[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/game_settings.gd" type="Script" id=1]

[node name="game settings" type="Popup"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -143.0
margin_right = 197.0
margin_bottom = 143.0

[node name="close_button" type="Button" parent="."]
margin_left = 461.0
margin_top = 295.0
margin_right = 507.0
margin_bottom = 315.0
text = "close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_button" type="Button" parent="."]
margin_left = 370.0
margin_top = 295.0
margin_right = 411.0
margin_bottom = 315.0
text = "save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load_button" type="Button" parent="."]
margin_left = 417.0
margin_top = 295.0
margin_right = 456.0
margin_bottom = 315.0
disabled = true
text = "load"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 198.0
margin_top = 48.0
margin_right = 433.0
margin_bottom = 90.0
min_value = 1.0
max_value = 20.0
value = 4.0
rounded = true
tick_count = 15
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="."]
margin_left = 196.0
margin_top = 98.0
margin_right = 272.0
margin_bottom = 138.0
text = "player 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton2" type="CheckButton" parent="."]
margin_left = 196.0
margin_top = 151.0
margin_right = 327.0
margin_bottom = 191.0
text = "player 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="."]
margin_left = 134.0
margin_top = 295.0
margin_right = 172.0
margin_bottom = 315.0
text = "play"

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 63.0
margin_right = 200.0
margin_bottom = 77.0
text = "20"

[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="save_button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="load_button" to="." method="_on_load_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
